# rust-website

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  justfile  readme.md
.github/workflows/: docker-image-build.yml
demos/example-demo/: demo_frontmatter.toml
demos/system-tactics/: demo_frontmatter.toml
docs/: architecture.md  project-ideas.md  security.md
docs/projects/housekeeping/: plan.md
docs/projects/template/: README.md  plan-template.md  spec-template.md
personal-website/: Cargo.toml
personal-website/posts/my-first-article/: post.md  post_frontmatter.toml
personal-website/src/: lib.rs  main.rs
personal-website/src/handlers/: blog_handler.rs  home_handler.rs  mod.rs  post_handler.rs  publications_handler.rs
personal-website/static/css/: index.css
personal-website/tailwind/: base.css  package.json
personal-website/templates/: base.html  centerpage.html  home.html  navbar.html  post.html
publications/a-concept-for-myocardial/: post_frontmatter.toml
publications/designing-and-validating-magnetic-motion/: post_frontmatter.toml
publications/enhancing-non-invasive-dynamic-arrays/: post_frontmatter.toml
publications/gradient-based-optimization-allpass/: post_frontmatter.toml
publications/investigation-of-converse/: post_frontmatter.toml
publications/kiel-cardio-database/: post_frontmatter.toml
publications/magnetoelectric-distance-estimation/: post_frontmatter.toml
publications/non-invasive-elecroanatomical-Mapping/: post_frontmatter.toml
publications/proof-principle-6d-tracking/: post_frontmatter.toml
publications/quantitative-evaluation/: post_frontmatter.toml
publications/step-width-estimation-magnetoelectric/: post_frontmatter.toml
publications/towards-analytically-computable/: post_frontmatter.toml
src/: lib.rs  main.rs
src/handlers/: blog_handler.rs  demo_handler.rs  home_handler.rs  mod.rs  post_handler.rs  privacy_handler.rs  publications_handler.rs
static/css/: index.css  wasm-demo.css
static/img/demos/: .gitkeep
static/js/: consent.js  modal.js  wasm-demo.js
static/models/: .gitkeep
static/wasm/: .gitkeep
static/wasm/example-project/: index.html  interactive.js
tailwind/: base.css  package-lock.json  package.json
templates/: base.html  demo.html  demos.html  home.html  navbar.html  post.html  privacy.html  publications.html
(+3 files in other folders)
