[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4.11.0"
env_logger = "0.11.8"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"]}
ignore = "0.4.23"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"