[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"
authors = ["Erik Engelhardt <https://github.com/DenominatorIsZero>"]
license = "MIT"
description = "Personal website and learning platform built with Rust and Actix-web, featuring AI demonstrations via WebAssembly"
repository = "https://github.com/DenominatorIsZero/rust-website"
homepage = "https://erik-engelhardt.com"
documentation = "https://github.com/DenominatorIsZero/rust-website#readme"
keywords = ["web", "personal-website", "actix-web", "blog", "wasm", "ai-demos"]
categories = ["web-programming", "template-engine", "webassembly"]

[dependencies]
tera = "1"
actix-web = "4.11.0"
env_logger = "0.11.8"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"]}
ignore = "0.4.23"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Optimized release profile for web deployment and Docker images
[profile.release]
opt-level = 'z'        # Optimize for size over performance
strip = "symbols"      # Remove symbol information
lto = true            # Enable link-time optimization
codegen-units = 1     # Single compilation unit for better optimization
panic = 'abort'       # Reduce panic handling overhead