[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4"
env_logger = "0.11.3"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["html"]}
ignore = "0.4"
toml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"